--- a/www/project_tools.css
+++ b/www/project_tools.css
@@ -7,7 +7,7 @@ body {
 	padding: 0px;
 	margin: 0px;
 	font-size: 11px;
-	font-family: Verdana, "Verdana CE",  Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
+	font-family: Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
 }
 
 #loginbar {
@@ -34,6 +34,10 @@ body {
 	text-decoration: underline;
 }
 
+#logo {
+        background: url("brandingtest/imgs/header_filler.png") repeat-x;
+}
+
 #menu {
 	border-top: 1px solid #5b83a9;
 	border-bottom: 1px solid #5b83a9;
@@ -45,7 +49,6 @@ body {
 .menu_link {
 	text-decoration: none;
 	font-weight: bold;
-	/*border: 6px solid #c7e4f2;*/
 	padding: 4px 8px 4px 8px;
 	color: #2f4353;
 }
