--- a/www/project_tools.css
+++ b/www/project_tools.css
@@ -7,7 +7,7 @@ body {
 	padding: 0px;
 	margin: 0px;
 	font-size: 20px;
-	font-family: Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
+	font-family: "Courier New", Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
 }
 
 #loginbar {
@@ -100,7 +100,7 @@ body {
 	clear: both;
 }
 
-.visualvm_area {
+h2 .visualvm_area {
 	border: 1px solid #c0c0c0;
 	border-bottom: 1px solid #f5f5f5;
 	background: #f5f5f5;
