--- a/www/project_tools.css
+++ b/www/project_tools.css
@@ -3,12 +3,12 @@ visualvm.dev.java.net header
 Author: Jiri Sedlacek
 */
 
-body {
+/* body {
 	padding: 0px;
 	margin: 0px;
 	font-size: 20px;
-	font-family: "Courier New", Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
-}
+	font-family: Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
+} */
 
 #loginbar {
 	background: #5b83a9;
@@ -43,7 +43,7 @@ body {
 	border-bottom: 1px solid #5b83a9;
 	background: #b7d4e2;
 	padding: 4px 10px 4px 10px;
-	font-size: 11px;
+	font-size: 15px;
 }
 
 .menu_link {
@@ -100,7 +100,7 @@ body {
 	clear: both;
 }
 
-h2 .visualvm_area {
+.visualvm_area {
 	border: 1px solid #c0c0c0;
 	border-bottom: 1px solid #f5f5f5;
 	background: #f5f5f5;
