Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1135 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/project_tools.css
+++ b/www/project_tools.css
@@ -3,12 +3,12 @@ visualvm.dev.java.net header
 Author: Jiri Sedlacek
 */
 
-/* body {
+#header {
 	padding: 0px;
 	margin: 0px;
 	font-size: 20px;
 	font-family: Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
-} */
+}
 
 #loginbar {
 	background: #5b83a9;
