--- a/www/project_tools.css
+++ b/www/project_tools.css
@@ -6,7 +6,7 @@ Author: Jiri Sedlacek
 body {
 	padding: 0px;
 	margin: 0px;
-	font-size: 3px;
+	font-size: 11px;
 	font-family: Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
 }
 
@@ -47,6 +47,8 @@ body {
 }
 
 .menu_link {
+        font-size: 11px;
+	font-family: Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
 	text-decoration: none;
 	font-weight: bold;
 	padding: 4px 8px 4px 8px;
@@ -60,6 +62,8 @@ body {
 }
 
 .menu_link_minor {
+        font-size: 11px;
+	font-family: Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
 	text-decoration: none;
 	padding: 4px 8px 4px 8px;
 	color: #3f5363;
