--- a/www/project_tools.css
+++ b/www/project_tools.css
@@ -6,7 +6,7 @@ Author: Jiri Sedlacek
 body {
 	padding: 0px;
 	margin: 0px;
-	font-size: 11px;
+	font-size: 12px;
 	font-family: Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
 }
 
@@ -43,10 +43,11 @@ body {
 	border-bottom: 1px solid #5b83a9;
 	background: #b7d4e2;
 	padding: 4px 10px 4px 10px;
-	font-size: 15px;
+	font-size: 11px;
 }
 
 .menu_link {
+        background: #5b83a9;
         font-size: 11px;
 	font-family: Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
 	text-decoration: none;
