--- a/www/project_tools.css
+++ b/www/project_tools.css
@@ -15,6 +15,7 @@ body {
 	padding: 3px 8px 3px 8px;
 	font-size: 10px;
 	color: #c7e4f2;
+        font-family: Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
 }
 
 #loginbar_message {
