--- a/www/project_tools.css
+++ b/www/project_tools.css
@@ -43,12 +43,13 @@ body {
 	border-top: 1px solid #5b83a9;
 	border-bottom: 1px solid #5b83a9;
 	background: #b7d4e2;
-	padding: 4px 8px 4px 8px;
-	font-size: 11px;
+	padding: 4px 8px 4px 8px !important;
+        margin: 0px !important;
+	font-size: 11px !important;
 }
 
 a.menu_link {
-        font-size: 11px;
+        font-size: 11px !important;
 	font-family: Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
 	text-decoration: none;
 	font-weight: bold;
@@ -63,7 +64,7 @@ a.menu_link:hover {
 }
 
 a.menu_link_minor {
-        font-size: 11px;
+        font-size: 11px !important;
 	font-family: Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
 	text-decoration: none;
 	padding: 4px 8px 4px 8px;
