Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1152 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/project_tools.css
+++ b/www/project_tools.css
@@ -37,6 +37,7 @@ body {
 
 #logo {
         background: url("brandingtest/imgs/header_filler.png") repeat-x;
+        height: 76px !important;
 }
 
 #menu {
