Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1159 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -18,6 +18,14 @@ td#navcol {
     display: none;
 }
 
+div#apphead {
+    display: none;
+}
+
+p.tasknav {
+    display: none;
+}
+
 table.axial {
     display: none;
 }
