Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1160 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -1,3 +1,9 @@
+/*
+ -------------------------------------------------------------------------------
+ --- HIDE DEFAULT BRANDING                                                   ---
+ -------------------------------------------------------------------------------
+*/
+
 div#collabnet {
     display: none;
 }
@@ -33,3 +39,7 @@ table.axial {
 div#footer {
     display: none;
 }
+
+/*
+ -------------------------------------------------------------------------------
+*/
