Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1161 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -40,6 +40,28 @@ div#footer {
     display: none;
 }
 
+
 /*
  -------------------------------------------------------------------------------
+ --- STYLE FOR HEADER                                                        ---
+ -------------------------------------------------------------------------------
 */
+
+#loginbar {
+	background: #5b83a9;
+	padding: 3px 8px 3px 8px;
+	font-size: 10px;
+	color: #c7e4f2;
+}
+
+#loginbar_message {
+	float: left;
+}
+
+#loginbar_login {
+	float: right;
+}
+
+#loginbar_clear {
+	clear: both;
+}
