Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1162 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -43,6 +43,20 @@ div#footer {
 
 /*
  -------------------------------------------------------------------------------
+ --- OVERRIDE DEFAULT STYLE                                                  ---
+ -------------------------------------------------------------------------------
+*/
+
+body {
+    padding: 0px;
+    margin: 0px;
+    font-size: 12px;
+    font-family: "Courier New", Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
+}
+
+
+/*
+ -------------------------------------------------------------------------------
  --- STYLE FOR HEADER                                                        ---
  -------------------------------------------------------------------------------
 */
