Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1165 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -48,7 +48,7 @@ div#footer {
 */
 
 body, h1, h2, h3, h4, h5, h6, p, td, table td, input, select { 
-    font-family: "Courier New", Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif !important;
+    font-family: Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif !important;
 }
 
 body {
