Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1167 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -69,18 +69,22 @@ body {
 */
 
 #loginbar {
-	background: #5b83a9;
-	padding: 3px 8px 3px 8px;
-	font-size: 10px;
-	color: #c7e4f2;
+    background: #5b83a9;
+    padding: 3px 8px 3px 8px;
+    font-size: 10px;
+    color: #c7e4f2;
+}
+
+div#loginbar a {
+    color: red !important;
 }
 
 #loginbar_message {
-	float: left;
+    float: left;
 }
 
 #loginbar_login {
-	float: right;
+    float: right;
 }
 
 #loginbar_clear {
