Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1168 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -76,7 +76,13 @@ body {
 }
 
 div#loginbar a {
-    color: red !important;
+    color: #c7e4f2;
+    text-decoration: underline;
+}
+
+div#loginbar a:hover {
+    color: #ffffff;
+    text-decoration: none;
 }
 
 #loginbar_message {
