--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -98,7 +98,7 @@ div#loginbar a:hover {
 
 #logo {
     background: url("https://visualvm.dev.java.net/brandingtest/imgs/header_filler.png") repeat-x;
-
+    height: 76px;
 }
 
 #menu {
@@ -109,6 +109,7 @@ div#loginbar a:hover {
 }
 
 #menu a.menu_link, #menu a.menu_link_minor {
+    font-size: 11px;
     text-decoration: none;
     padding: 4px 8px 4px 8px;
 }
