Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1175 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -102,6 +102,7 @@ div#loginbar a:hover {
 }
 
 #menu {
+    font-size: 11px;
     border-top: 1px solid #5b83a9;
     border-bottom: 1px solid #5b83a9;
     background: #b7d4e2;
