--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -61,6 +61,17 @@ body {
     font-size: 13px;
 }
 
+h2 {
+    border: 1px solid #c0c0c0;
+    border-bottom: 1px solid #f5f5f5;
+    background: #f5f5f5;
+    margin: 6px;
+    padding-top: 3px;
+    padding-bottom: 4px;
+    padding-left: 7px;
+    padding-right: 7px;
+}
+
 
 /*
  -------------------------------------------------------------------------------
