--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -61,7 +61,7 @@ body {
     font-size: 13px;
 }
 
-h2 {
+.composite h2 {
     border: 1px solid #c0c0c0;
     border-bottom: 1px solid #f5f5f5;
     background: #f5f5f5;
