--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -61,10 +61,11 @@ body {
     font-size: 13px;
 }
 
-.composite h2 {
+h2 {
     border: 1px solid #c0c0c0;
     border-bottom: 1px solid #f5f5f5;
-    background: #f5f5f5;
+    background: #f5f5f5 !important;
+    color: #000000;
     margin: 6px;
     padding-top: 3px;
     padding-bottom: 4px;
