--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -62,15 +62,15 @@ body {
 }
 
 h2 {
-    border: 1px solid #c0c0c0;
-    border-bottom: 1px solid #f5f5f5;
+    border: 1px solid #c0c0c0 !important;
+    border-bottom: 1px solid #f5f5f5 !important;
     background: #f5f5f5 !important;
-    color: #000000;
-    margin: 6px;
-    padding-top: 3px;
-    padding-bottom: 4px;
-    padding-left: 7px;
-    padding-right: 7px;
+    color: #000000 !important;
+    margin: 0px !important;
+    padding-top: 3px !important;
+    padding-bottom: 4px !important;
+    padding-left: 7px !important;
+    padding-right: 7px !important;
 }
 
 
