--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -64,13 +64,14 @@ body {
 h2 {
     border: 1px solid #c0c0c0 !important;
     border-bottom: 1px solid #f5f5f5 !important;
-    background: #f5f5f5 !important;
-    color: #000000 !important;
+    background: #b7d4e2 !important;
+    color: #2f4353 !important;
     margin: 0px !important;
     padding-top: 3px !important;
     padding-bottom: 4px !important;
     padding-left: 7px !important;
     padding-right: 7px !important;
+    font-size: 14px !important;
 }
 
 
@@ -79,6 +80,10 @@ h2 {
  --- STYLE FOR HEADER                                                        ---
  -------------------------------------------------------------------------------
 */
+
+#header {
+    margin-bottom: 10px;
+}
 
 #loginbar {
     background: #5b83a9;
