--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -62,8 +62,8 @@ body {
 }
 
 h2 {
-    border: 1px solid #c0c0c0 !important;
-    border-bottom: 1px solid #f5f5f5 !important;
+    border: 1px solid #5b83a9 !important;
+    border-bottom: 1px solid #b7d4e2 !important;
     background: #b7d4e2 !important;
     color: #2f4353 !important;
     margin: 0px !important;
