--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -146,3 +146,66 @@ div#loginbar a:hover {
     background: #2f4353;
     color: #c7e4f2 !important;
 }
+
+
+/*
+ -------------------------------------------------------------------------------
+ --- STYLE FOR FOOTER                                                        ---
+ -------------------------------------------------------------------------------
+*/
+
+#footer {
+    margin-top: 10px;
+    padding-top: 5px;
+    border-top: 1px solid #5b83a9;
+}
+
+#footer_links_container {
+	float: left;
+	width: 100%;
+	margin-right: -99%;
+}
+
+#footer_links {
+        margin-top: 3px;
+	margin-right: 272px;
+}
+
+#footer_logos {
+	float: right;
+        text-align: right;
+	width: 255px;
+        border-left: 2px solid #cccccc;
+}
+
+#project_links {
+    color: #555555;
+    text-align: right;
+}
+
+#project_links a, #project_links a:visited {
+    color: #555555;
+}
+
+#portal_links {
+    color: #888888;
+    margin-top: 3px;
+    text-align: right;
+}
+
+#portal_links a, #portal_links a:visited {
+    color: #888888;
+}
+
+#project_links a:hover, #portal_links a:hover {
+    color: black;
+}
+
+#footer img {
+    border: 0px;
+    vertical-align: middle;
+}
+
+#footer_clear {
+	clear: both;
+}
