Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1194 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -175,7 +175,7 @@ div#loginbar a:hover {
     margin-top: 10px;
     margin-bottom: 5px;
     padding-top: 5px;
-    border-top: 1px solid #5b83a9;
+    border-top: 1px solid #8bb3d9;
 }
 
 #cfooter_links_container {
