--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -61,17 +61,24 @@ body {
     font-size: 13px;
 }
 
-h2 {
-    border: 1px solid #5b83a9 !important;
-    border-bottom: 1px solid #b7d4e2 !important;
-    background: #b7d4e2 !important;
+h2, h3, h4 {
+    border: 1px solid #8bb3d9 !important;
+    border-bottom: 1px solid #e5f2f8 !important;
+    background: #e5f2f8 !important;
     color: #2f4353 !important;
     margin: 0px !important;
     padding-top: 3px !important;
     padding-bottom: 4px !important;
     padding-left: 7px !important;
     padding-right: 7px !important;
-    font-size: 14px !important;
+}
+
+h2 {
+    font-size: 13px;
+}
+
+h3 {
+    font-size: 12px;
 }
 
 
