--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -56,9 +56,10 @@ small, .small, div#footer, #login, .tabs th, .tabs td, #toptabs th, #toptabs td,
 }
 
 body {
-    padding: 0px;
-    margin: 0px;
-    font-size: 13px;
+    border: 0px !important;
+    padding: 0px !important;
+    margin: 0px !important;
+    font-size: 13px !important;
 }
 
 h2, h3, h4 {
@@ -74,11 +75,11 @@ h2, h3, h4 {
 }
 
 h2 {
-    font-size: 13px;
+    font-size: 13px !important;
 }
 
 h3 {
-    font-size: 12px;
+    font-size: 12px !important;
 }
 
 
