--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -56,10 +56,13 @@ small, .small, div#footer, #login, .tabs th, .tabs td, #toptabs th, #toptabs td,
 }
 
 body {
+    font-size: 13px !important;
+}
+
+body, #bodycol {
     border: 0px !important;
     padding: 0px !important;
     margin: 0px !important;
-    font-size: 13px !important;
 }
 
 h2, h3, h4 {
