Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1223 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -85,6 +85,10 @@ h3 {
     font-size: 12px !important;
 }
 
+th, td { 
+	padding: 0px !important; 
+}
+
 
 /*
  -------------------------------------------------------------------------------
