--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -59,7 +59,7 @@ body {
     font-size: 13px !important;
 }
 
-body, #bodycol, #breadcrumbs {
+body, #bodycol {
     border: 0px !important;
     padding: 0px !important;
     margin: 0px !important;
