Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1229 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -59,7 +59,7 @@ body {
     font-size: 13px !important;
 }
 
-body, #bodycol, #midcol {
+body, #bodycol {
     border: 0px !important;
     padding: 0px !important;
     margin: 0px !important;
@@ -96,7 +96,9 @@ th, td {
  -------------------------------------------------------------------------------
 */
 
-
+#header {
+    margin-bottom: 10px;
+}
 
 #loginbar {
     background: #5b83a9;
