Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1241 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -59,7 +59,7 @@ body {
     font-size: 13px !important;
 }
 
-body, #bodycol {
+body {
     border: 0px !important;
     padding: 0px !important;
     margin: 0px !important;
