Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1242 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -129,7 +129,7 @@ div#loginbar a:hover {
 }
 
 #logobar {
-        background: url('imgs/header_filler_small.png') repeat-x;
+        background: url('imgs/banner_filler.png') repeat-x;
         height: 60px;
 }
 
