--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -65,7 +65,7 @@ body {
 h2, h3 {
     border: 1px solid #8bb3d9 !important;
     border-bottom: 1px solid #e5f2f8 !important;
-    background: #e5f2f8 !important;
+    background: #c7e4f2 !important;
     color: #2f4353 !important;
     margin: 0px !important;
     padding-top: 3px !important;
@@ -84,6 +84,10 @@ h3 {
 
 th, td { 
     padding: 0px; 
+}
+
+.a:hover td, .a:hover, #rightcol div.siteinfo .a:hover, .b:hover td, .b:hover, #rightcol div.siteinfo .b:hover, .hilight {
+    background-color: #e5f2f8;
 }
 
 
