--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -68,10 +68,16 @@ h2, h3 {
     background: #c7e4f2 !important;
     color: #2f4353 !important;
     margin: 0px !important;
-    padding-top: 3px !important;
-    padding-bottom: 4px !important;
-    padding-left: 7px !important;
-    padding-right: 7px !important;
+    padding-top: 2px !important;
+    padding-bottom: 2px !important;
+    padding-left: 5px !important;
+    padding-right: 5px !important;
+}
+
+#contents_hints h2, #contents_hints h3 {
+    border: 1px solid #f57e37 !important;
+    border-bottom: 1px solid #fbc9ac !important;
+    background: #fbc9ac !important;
 }
 
 h2 {
