--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -56,10 +56,11 @@ small, .small, div#footer, #login, .tabs th, .tabs td, #toptabs th, #toptabs td,
 }
 
 body {
-    font-size: 13px !important;
+    font-size: 12px !important;
     border: 0px !important;
     padding: 0px !important;
     margin: 0px !important;
+    color: #444444;
 }
 
 h2, h3 {
