--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -56,11 +56,11 @@ small, .small, div#footer, #login, .tabs th, .tabs td, #toptabs th, #toptabs td,
 }
 
 body {
-    font-size: 12px !important;
+    font-size: 0.7em !important;
     border: 0px !important;
     padding: 0px !important;
     margin: 0px !important;
-    color: #444444;
+    color: #333333;
 }
 
 h2, h3 {
