--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -56,7 +56,7 @@ small, .small, div#footer, #login, .tabs th, .tabs td, #toptabs th, #toptabs td,
 }
 
 body {
-    font-size: 0.7em !important;
+    font-size: 12px !important;
     border: 0px !important;
     padding: 0px !important;
     margin: 0px !important;
