Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1257 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -88,7 +88,7 @@ th, td {
 }
 
 .a:hover td, .a:hover, #rightcol div.siteinfo .a:hover, .b:hover td, .b:hover, #rightcol div.siteinfo .b:hover, .hilight {
-    background-color: #e5f2f8;
+    background-color: #fbc9ac;
 }
 
 
