--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -88,7 +88,7 @@ th, td {
 }
 
 .a:hover td, .a:hover, #rightcol div.siteinfo .a:hover, .b:hover td, .b:hover, #rightcol div.siteinfo .b:hover, .hilight {
-    background-color: #fbc9ac;
+    background-color: #eef1f2;
 }
 
 
