--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -237,6 +237,11 @@ div#loginbar a:hover {
     border: 1px solid #f57e37 !important;
     border-bottom: 1px solid #fbc9ac !important;
     background: #fbc9ac !important;
+    margin-top: 20px !important;
+}
+
+#contents_hints h2.first, #contents_hints h3.first {
+    margin-top: 0px !important;
 }
 
 
