Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1267 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -238,6 +238,7 @@ div#loginbar a:hover {
     border-bottom: 1px solid #fbc9ac !important;
     background: #fbc9ac !important;
     margin-top: 20px !important;
+    margin-bottom: 10px !important;
 }
 
 #contents_hints h2.first, #contents_hints h3.first {
