Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1273 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -232,6 +232,10 @@ div#loginbar a:hover {
     padding-left: 12px;
 }
 
+#contents_hints div a:hover {
+    text-decoration: none !important;
+}
+
 #contents_hints h2, #contents_hints h3 {
     border: 1px solid #f57e37 !important;
     border-bottom: 1px solid #fbc9ac !important;
