Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1312 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/brandingtest.css
+++ b/www/brandingtest/brandingtest.css
@@ -214,7 +214,7 @@ div#loginbar a:hover {
     clear: both;
 }
 
-#contents_div a, #contents_div a:visited, #contents_div a:link.selfref, #contents_div a:visited.selfref {
+a, a:visited, a:link.selfref, a:visited.selfref {
     color: #5b83a9 !important;
     text-decoration: underline !important;
 }
