Fixed hints header color in default theme
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1382 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/css/visualvm.css
+++ b/www/css/visualvm.css
@@ -35,6 +35,10 @@
     vertical-align: top;
 }
 
+div#contents_hints h3 {
+    color: #2f4353 !important;
+}
+
 #contents_clear {
     clear: both;
 }
